@@ -273,3 +273,4 @@
 20031012 rzx.c: reset rzx_competition_mode when starting a non-competition
 	 mode recording.
 20031013 fuse.c: check libspectrum's version at startup.
+20031013 fuse.c: add libspectrum version to the creator custom data.
